--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "babel-plugin-transform-react-jsx": "^6.24.1",
         "babel-plugin-transform-runtime": "^6.23.0",
         "babel-preset-env": "^1.6.0",
+        "bitcoinjs-lib": "^3.1.1",
         "copy-webpack-plugin": "^4.0.1",
         "css-loader": "^0.28.4",
         "express": "^4.15.3",
