--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "trezor-convert-bcc",
+    "name": "trezor-claimbch",
     "version": "0.0.1",
     "author": "TREZOR <info@trezor.io>",
     "description": "",
