--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "style-loader": "^0.18.2",
         "webpack": "^3.4.1",
         "webpack-dev-middleware": "^1.11.0",
-        "webpack-hot-middleware": "^2.18.0"
+        "webpack-hot-middleware": "^2.18.0",
+        "whatwg-fetch": "^2.0.3"
     }
 }
