--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "license": "LGPL-3.0+",
     "scripts": {
         "dev": "babel-node ./webpack/server.js",
-        "build": "webpack --config ./webpack/webpack.config.prod.babel.js",
+        "build": "rm -rf build && webpack --config ./webpack/webpack.config.prod.babel.js",
         "test": ""
     },
     "dependencies": {},
